# summarize_dataframe

./: .gitignore  pyproject.toml
project/: summarize_df.py
tests/: test_summarize_dataframe.py
