[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["natalya.p <natalya.pimankova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pynvim = "^0.4.3"
numpy = "^1.22.1"
pandas = "^1.3.5"
commitizen = "^2.20.4"
pre-commit = "^2.16.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
